--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
+body,h1,h2,h3,h4,h5,h6 {font-family: "Inconsolata", sans-serif}
 
 body, html {
   height: 100%;
@@ -62,42 +62,42 @@ body, html {
 
 <!-- About Section -->
 <div class="w3-container w3-grayscale w3-purple" style="padding:128px 16px" id="about">
-  <h3 class="w3-center w3-xxlarge">ABOUT THE CLUB</h3>
-  <p class="w3-center w3-xlarge">What We Do in the Club</p>
+  <h3 class="w3-center w3-xxxlarge">ABOUT THE CLUB</h3>
+  <p class="w3-center w3-xxlarge">What We Do in the Club</p>
   <div class="w3-row-padding w3-center" style="margin-top:64px">
     <div class="w3-quarter">
       <i class="fa fa-laptop w3-margin-bottom w3-jumbo w3-center"></i>
-      <p class="w3-xlarge">Activities</p>
-      <p class= "w3-large">Our club's activities consist of designing and creating playable video games using programs such as Unity, Unreal Engine, and Godot</p>
+      <p class="w3-xxlarge">Activities</p>
+      <p class= "w3-xlarge">Our club's activities consist of designing and creating playable video games using programs such as Unity, Unreal Engine, and Godot</p>
     </div>
     <div class="w3-quarter">
       <i class="fa fa-heart w3-margin-bottom w3-jumbo"></i>
-      <p class="w3-xlarge">Passion</p>
-      <p class= "w3-large">Our motivation as a club is creating video games for people to enjoy while applying our personal skills to make it happen</p>
+      <p class="w3-xxlarge">Passion</p>
+      <p class= "w3-xlarge">Our motivation as a club is creating video games for people to enjoy while applying our personal skills to make it happen</p>
     </div>
     <div class="w3-quarter">
       <i class="fa fa-pie-chart w3-margin-bottom w3-jumbo"></i>
-      <p class="w3-xlarge">Meetings</p>
-      <p class= "w3-large">We will always have weekly meetings on Thursdays in room 3712 but if we must meet more than once a week then we will contact the club's members</p>
+      <p class="w3-xxlarge">Meetings</p>
+      <p class= "w3-xlarge">We will always have weekly meetings on Thursdays in room 3712 but if we must meet more than once a week then we will contact the club's members</p>
     </div>
     <div class="w3-quarter">
       <i class="fa fa-graduation-cap w3-margin-bottom w3-jumbo"></i>
-      <p class="w3-xlarge">Learning</p>
-      <p class= "w3-large">Anybody can join even if you don't have any skills in game development. This is also a learning experience if you are interested in programming and art</p>
+      <p class="w3-xxlarge">Learning</p>
+      <p class= "w3-xlarge">Anybody can join even if you don't have any skills in game development. This is also a learning experience if you are interested in programming and art</p>
     </div>
   </div>
 </div>
 <!-- Team Section -->
 <div class="w3-container w3-black" style="padding:128px 16px" id="team">
-  <h3 class="w3-center w3-xxlarge">THE TEAM ~ 11 MEMBERS</h3>
-  <p class="w3-center w3-xlarge">The Club's Executives</p>
+  <h3 class="w3-center w3-xxxlarge">THE TEAM ~ 11 MEMBERS</h3>
+  <p class="w3-center w3-xxlarge">The Club's Executives</p>
   <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
     <div class="w3-col l3 m6 w3-margin-top">
       <div class="w3-card">
         <div class="w3-container">
-          <h3>Ayinde Abrams</h3>
-          <p class="w3-opacity">President & Co-Founder</p>
-          <p>Head developer and club planner</p>
+          <h3 class="w3-xxlarge">Ayinde Abrams</h3>
+          <p class="w3-opacity w3-large">President & Co-Founder</p>
+          <p class="w3-medium">Head programmer and club planner</p>
           <p><form action="https://www.instagram.com/nkosiayinde?" target="https://www.instagram.com/nkosiayinde?">
               <button class="w3-button w3-light-grey w3-block"><i class="fa fa-instagram"></i> @nkosiayinde</button>
           
@@ -109,9 +109,9 @@ body, html {
     <div class="w3-col l3 m6 w3-margin-top">
       <div class="w3-card w3-">
         <div class="w3-container">
-          <h3>Asa Muhammad</h3>
-          <p class="w3-opacity">Vice President & Co-Founder</p>
-          <p>Head graphic designer and social media manager.</p>
+          <h3 class="w3-xxlarge">Asa Muhammad</h3>
+          <p class="w3-opacity w3-large">Vice President & Co-Founder</p>
+          <p class="w3-medium">Head graphic designer and social media manager</p>
           <p><form action="https://www.instagram.com/asa.was.here?" target="https://www.instagram.com/asa.was.here?">
               <button class="w3-button w3-light-grey w3-block"><i class="fa fa-instagram"></i> @asa.was.here</button>
               
@@ -164,18 +164,8 @@ body, html {
   <p class="w3-center w3-xlarge">If You Have Any Questions, Contact Us!</p>
   <div style="margin-top:48px">
     <p><i class=" fa fa-envelope w3-xlarge w3-margin">  Ayinde Abrams: Isokn7654@gmail.com </i > </p>
+    <p><i class=" fa fa-instagram w3-xlarge w3-margin">  Instagram: @gdcwheaton</i > </p>
     <br>
-    <form action="https://mail.google.com/mail/u/0/#inbox?compose/" target="https://mail.google.com/mail/u/0/#inbox?compose/">
-      <p><input class="w3-input w3-border" type="text" placeholder="Name" required name="Name"></p>
-      <p><input class="w3-input w3-border" type="text" placeholder="Email" required name="Email"></p>
-      <p><input class="w3-input w3-border" type="text" placeholder="Subject" required name="Subject"></p>
-      <p><input class="w3-input w3-border" type="text" placeholder="Message" required name="Message"></p>
-      <p>
-        <button class="w3-button w3-black" type="submit">
-          <i class="fa fa-paper-plane"></i> SEND MESSAGE
-        </button>
-      </p>
-    </form>
   </div>
 </div>
 
