--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ body, html {
   <p class="w3-center w3-xlarge">The Games We've Created / Are Currently Developing</p>
   <div class="w3-row-padding" style="margin-top:64px">
     <div class="w3-col l3 m6">
-      <img src="https://nkosidaniel/wheatongdc/ProjGal.jpg" class="w3-hover-opacity "  alt="A microphone" width=100% height= 100%>
+      <img src="https://nkosidaniel.github.io/wheatongdc/ProjGal.jpg" class="w3-hover-opacity "  alt="A microphone" width=100% height= 100%>
     </div>
     </div>
     </div>
