--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ body, html {
 <!-- About Section -->
 <div class="w3-container w3-grayscale w3-purple" style="padding:128px 16px" id="about">
   <h3 class="w3-center w3-xxxlarge">ABOUT THE CLUB</h3>
-  <p class="w3-center w3-xxlarge">What We Do in the Club</p>
+  <p class="w3-center w3-xlarge">The Game Development Club is a club where people with creativity and skills will have the opportunity to create video games</p>
   <div class="w3-row-padding w3-center" style="margin-top:64px">
     <div class="w3-quarter">
       <i class="fa fa-laptop w3-margin-bottom w3-jumbo w3-center"></i>
