--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="apple-touch-icon" sizes="180x180" href="https://nkosidaniel.github.io/wheatongdc/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://nkosidaniel.github.io/wheatongdc/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="https://nkosidaniel.github.io/wheatongdc/favicon-16x16.png">
+<link rel="manifest" href="https://nkosidaniel.github.io/wheatongdc/site.webmanifest">
+<link rel="mask-icon" href="https://nkosidaniel.github.io/wheatongdc/safari-pinned-tab.svg" color="#5bbad5">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
 <style>
