Update index.html #1

--- a/index.html
+++ b/index.html
@@ -82,28 +82,28 @@ body, html {
     <div class="w3-quarter">
       <i class="fa fa-laptop w3-margin-bottom w3-jumbo w3-center"></i>
       <p class="w3-xxlarge">Activities</p>
-      <p class= "w3-xlarge">Our club's activities consist of designing and creating playable video games using programs such as Unity, Unreal Engine, and Godot</p>
+      <p class= "w3-xlarge">Consists of designing, researching and developing video games using software like Unity and Unreal Engine</p>
     </div>
     <div class="w3-quarter">
       <i class="fa fa-heart w3-margin-bottom w3-jumbo"></i>
       <p class="w3-xxlarge">Passion</p>
-      <p class= "w3-xlarge">Our motivation as a club is creating video games for people to enjoy while applying our personal skills to make it happen</p>
+      <p class= "w3-xlarge">Our club's goal is to create enjoyable video games by applying our personal skills. Join us in making it happen!</p>
     </div>
     <div class="w3-quarter">
       <i class="fa fa-pie-chart w3-margin-bottom w3-jumbo"></i>
       <p class="w3-xxlarge">Meetings</p>
-      <p class= "w3-xlarge">We will always have weekly meetings on Thursdays in room 3712 but if we must meet more than once a week then we will contact the club's members</p>
+      <p class= "w3-xlarge">We have meetings every Thursdays in room 3712. In case of  any exceptions, members will be contacted.</p>
     </div>
     <div class="w3-quarter">
       <i class="fa fa-graduation-cap w3-margin-bottom w3-jumbo"></i>
       <p class="w3-xxlarge">Learning</p>
-      <p class= "w3-xlarge">Anybody can join even if you don't have any skills in game development. This is also a learning experience if you are interested in programming and art</p>
+      <p class= "w3-xlarge">We and will teach each other our personal skills. We learn and grow together as a team!</p>
     </div>
   </div>
 </div>
 <!-- Team Section -->
 <div class="w3-container w3-black" style="padding:128px 16px" id="team">
-  <h3 class="w3-center w3-xxxlarge">THE TEAM ~ 11 MEMBERS</h3>
+  <h3 class="w3-center w3-xxxlarge">THE TEAM</h3>
   <p class="w3-center w3-xxlarge">The Club's Executives</p>
   <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
     <div class="w3-col l3 m6 w3-margin-top">
@@ -111,7 +111,7 @@ body, html {
         <div class="w3-container">
           <h3 class="w3-xxlarge">Ayinde Abrams</h3>
           <p class="w3-opacity w3-large">President & Co-Founder</p>
-          <p class="w3-medium">Head programmer and club planner</p>
+          <p class="w3-medium">Lead Programmer and Project Manager</p>
           <p><form action="https://www.instagram.com/nkosiayinde?" target="https://www.instagram.com/nkosiayinde?">
               <button class="w3-button w3-light-grey w3-block"><i class="fa fa-instagram"></i> @nkosiayinde</button>
           
@@ -125,7 +125,7 @@ body, html {
         <div class="w3-container">
           <h3 class="w3-xxlarge">Asa Muhammad</h3>
           <p class="w3-opacity w3-large">Vice President & Co-Founder</p>
-          <p class="w3-medium">Head graphic designer and social media manager</p>
+          <p class="w3-medium">Lead Graphic Designer and Social Media Manager</p>
           <p><form action="https://www.instagram.com/asa.was.here?" target="https://www.instagram.com/asa.was.here?">
               <button class="w3-button w3-light-grey w3-block"><i class="fa fa-instagram"></i> @asa.was.here</button>
               
