--- a/projectGalactic/index.html
+++ b/projectGalactic/index.html
@@ -31,6 +31,11 @@ body, html {
   background-image: url("https://nkosidaniel.github.io/wheatongdc/My-Eyes.png");
 }
 
+.column {
+  float: right;
+  margin-left: 100px;
+}
+
 .w3-bar .w3-button {
   padding: 16px;
 }
@@ -148,8 +153,10 @@ body, html {
   <p class="w3-center w3-xlarge">The Games We've Created / Are Currently Developing</p>
   <div class="w3-row-padding" style="margin-top:64px">
     <div class="w3-col l3 m6">
-      <a  style="text-decoration:none" href="https://nkosidaniel.github.io/wheatongdc/projectGalactic/index.html"><img src="https://nkosidaniel.github.io/wheatongdc/ProjGal.jpg " class="w3-hover-opacity "  alt="A microphone" width=100% height= 100%> <p class="w3-center w3-xlarge"> Project Galactic</p>
+      <a  style="text-decoration:none" href="https://nkosidaniel.github.io/wheatongdc/projectGalactic/index.html">
+          <img src="https://nkosidaniel.github.io/wheatongdc/ProjGal.jpg " class="w3-hover-opacity "  alt="A microphone" width=100% height= 100%> <p class="w3-center w3-xlarge "> Project Galactic</p>
       </a>
+
     </div>
     </div>
     </div>
