--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ body, html {
 <!-- Header with full-height image -->
 <header class="bgimg-1 w3-display-container w3-grayscale" id="home">
   <div class="w3-display-left w3-text-white" style="padding:28px">
-    <span class="w3-jumbo w3-hide-small">Join The WHS Game Development Club</span><br>
+    <span class="w3-jumbo w3-hide-small">The WHS Game Development Club</span><br>
     <span class="w3-xxlarge w3-hide-large w3-hide-medium">Join The WHS Game Development Club</span><br>
     <span class="w3-large">Start developing your dreams...</span>
     <p><a href="#about" class="w3-button w3-purple w3-padding-large w3-large w3-margin-top">Learn more and start today</a></p>
